Draft new docling document format, pydantic model and tests
Signed-off-by: Christoph Auer <cau@zurich.ibm.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,6 +119,7 @@ module = [
     "json_schema_for_humans.*",
     "pandas.*",
     "tabulate.*",
+    "yaml.*"
 ]
 ignore_missing_imports = true
 
