Turn captions into list field
Signed-off-by: Christoph Auer <cau@zurich.ibm.com>

--- a/test/data/experimental/dummy_doc.yaml
+++ b/test/data/experimental/dummy_doc.yaml
@@ -132,8 +132,8 @@ figures: # All figures...
     label: "figure"
     parent:
       $ref: "#/body"
-    caption:
-      $ref: "/texts/3"
+    captions:
+      - $ref: "/texts/3"
     data: # BaseFigureData Type
       classification: "illustration"
       confidence: 0.78
