--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,10 +96,15 @@ include_trailing_comma = true
 
 [tool.autoflake]
 in-place = true
+ignore-init-module-imports = true
 remove-all-unused-imports = true
 remove-unused-variables = true
 expand-star-imports = true
 recursive = true
+
+[tool.flake8]
+per-file-ignores = "__init__.py:F401"
+classmethod-decorators = "classmethod,validator"
 
 [tool.mypy]
 pretty = true
