Add tree validation API and test case
Signed-off-by: Christoph Auer <cau@zurich.ibm.com>

--- a/test/data/experimental/dummy_doc.yaml
+++ b/test/data/experimental/dummy_doc.yaml
@@ -80,6 +80,7 @@ texts:
           t: 354.3
           b: 334.4
           r: 376.0
+          coord_origin: BOTTOMLEFT
         charspan: [ 0,734 ]
   - orig: "Figure 1: Four examples of complex page layouts across dif-\nferent document categories" # nested inside the figure
     text: "Figure 1: Four examples of complex page layouts across different document categories"
