--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,8 @@ jsonref = "^1.1.0"
 json-schema-for-humans = "^1.0.0"
 tabulate = "^0.9.0"
 pandas = "^2.2.2"
+pydantic-extra-types = "^2.9.0"
+semver = "^3.0.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
@@ -67,7 +69,6 @@ flake8-docstrings = "^1.6.0"
 pep8-naming = "^0.13.2"
 jsondiff = "^2.0.0"
 types-setuptools = "^70.3.0"
-python-semantic-release = "^7.32.2"
 
 [tool.setuptools.packages.find]
 where = ["docling_core/resources/schemas"]
