--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ pep8-naming = "^0.13.2"
 jsondiff = "^2.0.0"
 types-setuptools = "^70.3.0"
 python-semantic-release = "^7.32.2"
+pandas-stubs = "^2.1.4.231227"
 
 [tool.setuptools.packages.find]
 where = ["docling_core/resources/schemas"]
