add classification and description in PictureData
Signed-off-by: Michele Dolfi <dol@zurich.ibm.com>

--- a/test/data/docling_document/unit/PictureItem.yaml
+++ b/test/data/docling_document/unit/PictureItem.yaml
@@ -1,6 +1,8 @@
 captions: []
 children: []
-data: {}
+data:
+  classification: null
+  description: null
 footnotes: []
 image: null
 label: picture
