--- a/test/data/experimental/2206.01062.experimental.yaml
+++ b/test/data/experimental/2206.01062.experimental.yaml
@@ -216,7 +216,9 @@ pictures:
 - captions:
   - $ref: '#/texts/12'
   children: []
-  data: {}
+  data:
+    classification: null
+    description: null
   footnotes: []
   image: null
   label: picture
@@ -238,7 +240,9 @@ pictures:
 - captions:
   - $ref: '#/texts/39'
   children: []
-  data: {}
+  data:
+    classification: null
+    description: null
   footnotes: []
   image: null
   label: picture
@@ -260,7 +264,9 @@ pictures:
 - captions:
   - $ref: '#/texts/70'
   children: []
-  data: {}
+  data:
+    classification: null
+    description: null
   footnotes: []
   image: null
   label: picture
@@ -282,7 +288,9 @@ pictures:
 - captions:
   - $ref: '#/texts/76'
   children: []
-  data: {}
+  data:
+    classification: null
+    description: null
   footnotes: []
   image: null
   label: picture
@@ -304,7 +312,9 @@ pictures:
 - captions:
   - $ref: '#/texts/117'
   children: []
-  data: {}
+  data:
+    classification: null
+    description: null
   footnotes: []
   image: null
   label: picture
