add advanced picture data content
Signed-off-by: Michele Dolfi <dol@zurich.ibm.com>

--- a/test/data/experimental/dummy_doc.yaml
+++ b/test/data/experimental/dummy_doc.yaml
@@ -145,6 +145,11 @@ pictures: # All pictures...
         smi: "..."
         confidence: 0.98
         provenance: "model3-1.0.0"
+      advanced:
+        myanalysis:
+          prediction: "abc"
+        something_else:
+          text: "aaa"
       # content structure?
     image:
       mimetype: image/png
