store list of classes in classification
Signed-off-by: Michele Dolfi <dol@zurich.ibm.com>

--- a/test/data/doc/dummy_doc.yaml
+++ b/test/data/doc/dummy_doc.yaml
@@ -136,8 +136,9 @@ pictures: # All pictures...
     data: # PictureData Type
       classification:
         provenance: model1
-        predicted_class: "illustration"
-        confidence: 0.78
+        predicted_classes:
+          - class_name: "illustration"
+            confidence: 0.78
       description:
         text: "..."
         provenance: "model2"
