introduce picturedata as list of annotations
Signed-off-by: Michele Dolfi <dol@zurich.ibm.com>

--- a/test/data/doc/2206.01062.yaml
+++ b/test/data/doc/2206.01062.yaml
@@ -216,9 +216,7 @@ pictures:
 - captions:
   - $ref: '#/texts/12'
   children: []
-  data:
-    classification: null
-    description: null
+  annotations: []
   footnotes: []
   image: null
   label: picture
@@ -240,9 +238,7 @@ pictures:
 - captions:
   - $ref: '#/texts/39'
   children: []
-  data:
-    classification: null
-    description: null
+  annotations: []
   footnotes: []
   image: null
   label: picture
@@ -264,9 +260,7 @@ pictures:
 - captions:
   - $ref: '#/texts/70'
   children: []
-  data:
-    classification: null
-    description: null
+  annotations: []
   footnotes: []
   image: null
   label: picture
@@ -288,9 +282,7 @@ pictures:
 - captions:
   - $ref: '#/texts/76'
   children: []
-  data:
-    classification: null
-    description: null
+  annotations: []
   footnotes: []
   image: null
   label: picture
@@ -312,9 +304,7 @@ pictures:
 - captions:
   - $ref: '#/texts/117'
   children: []
-  data:
-    classification: null
-    description: null
+  annotations: []
   footnotes: []
   image: null
   label: picture
