--- a/test/data/docling_document/unit/PictureItem.yaml
+++ b/test/data/docling_document/unit/PictureItem.yaml
@@ -1,10 +1,6 @@
+annotations: []
 captions: []
 children: []
-data:
-  advanced: null
-  classification: null
-  description: null
-  molecule: null
 footnotes: []
 image: null
 label: picture
