add TokenAwareChunker, add serialize to chunkers
Co-authored-by: Bill Murdock <bmurdock@redhat.com>
Signed-off-by: Panos Vagenas <35837085+vagenas@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,8 @@ pandas = "^2.1.4"
 pillow = "^10.3.0"
 pyyaml = ">=5.1,<7.0.0"
 typing-extensions = "^4.12.2"
+transformers = "^4.46.3"
+semchunk = "^2.2.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
@@ -121,6 +123,7 @@ module = [
     "jsonschema.*",
     "requests.*",
     "tabulate.*",
+    "transformers.*",
     "yaml.*",
 ]
 ignore_missing_imports = true
