--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,8 +55,11 @@ pandas = "^2.1.4"
 pillow = "^10.3.0"
 pyyaml = ">=5.1,<7.0.0"
 typing-extensions = "^4.12.2"
-transformers = "^4.46.3"
-semchunk = "^2.2.0"
+transformers = { version = "^4.46.3", optional = true }
+semchunk = { version = "^2.2.0", optional = true }
+
+[tool.poetry.extras]
+chunking = ["transformers", "semchunk"]
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
