--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,6 +127,7 @@ module = [
     "jsonref.*",
     "jsonschema.*",
     "requests.*",
+    "semchunk.*",
     "tabulate.*",
     "transformers.*",
     "yaml.*",
