added the , and rewrote it to make it more general with a GraphItem, as well as having cell- and link-labels
Signed-off-by: Peter Staar <taa@zurich.ibm.com>

--- a/test/data/docling_document/unit/FormItem.yaml
+++ b/test/data/docling_document/unit/FormItem.yaml
@@ -13,7 +13,7 @@ cells:
   text: '1'
 children: []
 content_layer: body
-label: key_value_region
+label: form
 links:
 - label: to_value
   source_cell_id: 0
